# OpenENV_RL

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  tiffin_environment.py
tiffin_packer/: __init__.py  client.py  grader.py  models.py  tasks.py
tiffin_packer/simulation/: __init__.py  engine.py  pybullet_renderer.py
tiffin_packer/vlm/: __init__.py  classifier.py  food_db.json
